Improved ParserDeliveryAcceptanceTest with more permutations; Minor fixes to lexer to better handle soy tags within HTML attribute names and values; Added highlighter support for function calls; Improved element references in expression parser; Added new test source to ensure gramatical errors do not hang or abort the parsing operation; Parser implementation now builds proper structure honoring operator precedence, nested soy tags, and compound soy tags like {switch} and {if}; Enabled some simple error checking and reporting.

--- a/src/net/venaglia/nondairy/i18n/nondairy_en.properties
+++ b/src/net/venaglia/nondairy/i18n/nondairy_en.properties
@@ -52,9 +52,20 @@ syntax.error.expected.name=Expression name
 syntax.error.expected.expression=Expression expected
 syntax.error.expected.directive=Directive expected
 syntax.error.expected.colon=Missing colon in ternary expression
+syntax.error.expected.parameter.declaration=Named parameter declaration
+syntax.error.expected.keyword.in=Missing ''in'' keyword
+syntax.error.expected.keyword.range=Missing ''range'' keyword
+syntax.error.orphaned.section.tag=Encountered a '{'{0}'}' but no enclosing '{'{1}'}'
+syntax.error.duplicate.section.tag=Duplicate '{'{0}'}' found in '{'{1}'}'
+syntax.error.out-of-order.section.tag=Encountered '{'{0}'}' out of order
+syntax.error.unexpected.close.tag=Close tag '{'{0}'}' without a begin tag
 syntax.error.unexpected.eof=Unexpected end of file
+syntax.error.unexpected.range.parameter=Too many parameters to ''range'' expression
+syntax.error.missing.range.parameter=Missing parameters to ''range'' expression
+syntax.error.unclosed.open.tag=Tag is not closed
 syntax.error.invalid.close.tag=Invalid close tag
 syntax.error.invalid.function.parameter.list=Invalid parameter list
+syntax.error.unspecified=An unspecified error has occurred
 
 
 assertion.error.too.many.enum.values=Too many values defined in {0}: {1}
