Implemented new classes to represent namespaces, templates, and parameters; Now using factory pattern with annotations to generate the appropriate wrapper classes based on SoyElement type; Added a new toolkit (PsiElementCollection, PsiElementMapper, PsiPath, ElementPredicate, and TraversalPredicate) to make walking the tree painless; A few lexer tweaks around doc comments and line breaks to better isloate parameter descriptions; Added strcture view elements; Parser now supports custom tag_pair markers to make tree navigation more efficient; Added ElementManipulator implementation that supports SoyASTPsiElements; Features, such as: go to declaration, find usages, refactor rename are now starting to work; Added code folding for template tag pairs; Added new unit tests to check for crashing due to malformed syntax in soy source; Added images and Gimp file for structure view; Updated plugin version to 0.3 for next release.

--- a/src/net/venaglia/nondairy/i18n/nondairy_en.properties
+++ b/src/net/venaglia/nondairy/i18n/nondairy_en.properties
@@ -51,10 +51,13 @@ syntax.error.expected.command=Expression expected
 syntax.error.expected.name=Expression name
 syntax.error.expected.expression=Expression expected
 syntax.error.expected.directive=Directive expected
-syntax.error.expected.colon=Missing colon in ternary expression
-syntax.error.expected.parameter.declaration=Named parameter declaration
+syntax.error.expected.colon.in.ternary=Missing colon in ternary expression
+syntax.error.expected.colon.after.parameter.name=Colon expected after parameter name
+syntax.error.expected.parameter.declaration=Missing named parameter declaration
 syntax.error.expected.keyword.in=Missing ''in'' keyword
 syntax.error.expected.keyword.range=Missing ''range'' keyword
+syntax.error.expected.parameter.name=Parameter name expected
+syntax.error.expected.parameter.value=Missing parameter value
 syntax.error.orphaned.section.tag=Encountered a '{'{0}'}' but no enclosing '{'{1}'}'
 syntax.error.duplicate.section.tag=Duplicate '{'{0}'}' found in '{'{1}'}'
 syntax.error.out-of-order.section.tag=Encountered '{'{0}'}' out of order
