Committing changes for v0.3.2

--- a/src/net/venaglia/nondairy/i18n/nondairy_en.properties
+++ b/src/net/venaglia/nondairy/i18n/nondairy_en.properties
@@ -19,6 +19,7 @@
 syntax.color_editor.title=Closure Templates
 syntax.color_editor.category.command=Command
 syntax.color_editor.category.keyword=Keyword
+syntax.color_editor.category.special_char=Special Character
 syntax.color_editor.category.namespace=File Namespace
 syntax.color_editor.category.template.identifier=Template Identifier
 syntax.color_editor.category.template.content=Template Content
@@ -47,8 +48,10 @@ lexer.error.unexpected.token=Unexpected token {0} sent by lexer
 
 syntax.error.command.not.closable=Illegal close tag for command: {0}
 syntax.error.invalid.tag.declaration=Invalid tag declaration: {0}
-syntax.error.expected.command=Expression expected
-syntax.error.expected.name=Expression name
+syntax.error.string.literal.double.quotes=Cannot use double quotes for string literals
+syntax.error.expected.boolean_expression=Boolean expression expected
+syntax.error.expected.command=Closure command expected
+syntax.error.expected.name=Name expected
 syntax.error.expected.expression=Expression expected
 syntax.error.expected.directive=Directive expected
 syntax.error.expected.colon.in.ternary=Missing colon in ternary expression
@@ -58,6 +61,7 @@ syntax.error.expected.keyword.in=Missing ''in'' keyword
 syntax.error.expected.keyword.range=Missing ''range'' keyword
 syntax.error.expected.parameter.name=Parameter name expected
 syntax.error.expected.parameter.value=Missing parameter value
+syntax.error.inconvertable.expression=Cannot convert expression of {0} type to a {1}
 syntax.error.orphaned.section.tag=Encountered a '{'{0}'}' but no enclosing '{'{1}'}'
 syntax.error.duplicate.section.tag=Duplicate '{'{0}'}' found in '{'{1}'}'
 syntax.error.out-of-order.section.tag=Encountered '{'{0}'}' out of order
@@ -70,7 +74,17 @@ syntax.error.invalid.close.tag=Invalid close tag
 syntax.error.invalid.function.parameter.list=Invalid parameter list
 syntax.error.unspecified=An unspecified error has occurred
 
+syntax.expression.type.any=unknown
+syntax.expression.type.string=string
+syntax.expression.type.number=number
+syntax.expression.type.boolean=boolean
+syntax.expression.type.unknown=unknown
 
 assertion.error.too.many.enum.values=Too many values defined in {0}: {1}
 assertion.error.value.cannot.be.null={0} cannot be null
 assertion.error.values.not.equal=Values not equal - Expected: <{0}> Actual: <{1}>
+
+find.usage.type.variable=variable
+find.usage.type.function=soy function
+find.usage.type.template=soy template
+find.usage.type.property=property
