Adding inspections; Several enhancements to PsiElementPath; Updates to comment handling in lexer; Improvements to doc parser; Added tests for new inspections; Bumped plugin version to 0.5.0.

--- a/src/net/venaglia/nondairy/i18n/nondairy.properties
+++ b/src/net/venaglia/nondairy/i18n/nondairy.properties
@@ -89,3 +89,31 @@ find.usage.type.variable=variable
 find.usage.type.function=soy function
 find.usage.type.template=soy template
 find.usage.type.property=property
+
+inspection.group.title=Closure templates
+inspection.unused.parameter.label=Unused parameters
+inspection.unused.parameter.message=Unused parameter ''{0}''
+inspection.unused.parameter.fix=Remove Unused Parameter ''{0}''
+inspection.unused.parameter.description=Detects when a parameter is declared in template docs, but not used anywhere in that template.
+inspection.undeclared.parameter.label=Undeclared parameters
+inspection.undeclared.parameter.message=Parameter ''{0}'' is not declared
+inspection.undeclared.parameter.fix=Add Parameter ''{0}'' to Declaration
+inspection.undeclared.parameter.description=Detects when a parameter is used in a template and is not declared in template docs.
+inspection.undeclared.call.parameter.label=Undeclared parameters in call
+inspection.undeclared.call.parameter.message=Parameter ''{0}'' is not declared
+inspection.undeclared.call.parameter.fix=Add Parameter ''{0}'' to Declaration
+inspection.undeclared.call.parameter.description=Detects call and delcall commands that refer to undefined template names.
+inspection.msg.in.iterator.label=Msg command in iterator
+inspection.msg.in.iterator.message=Msg command cannot be properly localized when within an iterator.
+inspection.msg.in.iterator.description=Cosure templates do not support placing <b>msg</b> commands inside iterator commands.<br/><br/>\
+These structures tend to represent lists which cannot be properly localized. This inspection detects these errors and alerts the developer.<br/><br/>\
+For example, the folowing would trigger this inspection:
+inspection.msg.without.description.label=Msg without description
+inspection.msg.without.description.message=Msg command should have a ''desc'' attribute for translators.
+inspection.msg.without.description.description=Msg tags should always provide a description to aid translators. This inspection finds those that are missingn one.
+inspection.call.missing.param.label=Call missing required param
+inspection.call.missing.param.message=Call to {0} should specify a value for parameter {1}.
+inspection.call.missing.param.description=Detects when a call is made, but a required parameter is missing.
+inspection.call.undeclared.template.label=Call undeclared template
+inspection.call.undeclared.template.message=Template {0} could not be found.
+inspection.call.undeclared.template.description=Detects call and delcall commands that refer to undefined template names.
