Bunped version to 5.0.1, Fixed problem with stale VFS entries in cache; Error message given for template name missing "." is now more helpful; Implemented expression parsing for elseif and case; Initial refactoring to properly support delpackage, deltemplate and delcall; All cache, references, look-ups and inspections related to delpackage, deltemplate and delcall are currently unsupported.

--- a/src/net/venaglia/nondairy/i18n/nondairy.properties
+++ b/src/net/venaglia/nondairy/i18n/nondairy.properties
@@ -61,6 +61,7 @@ syntax.error.expected.keyword.in=Missing ''in'' keyword
 syntax.error.expected.keyword.range=Missing ''range'' keyword
 syntax.error.expected.parameter.name=Parameter name expected
 syntax.error.expected.parameter.value=Missing parameter value
+syntax.error.expected.template.definition=Template name must start with a ''.''
 syntax.error.inconvertable.expression=Cannot convert expression of {0} type to a {1}
 syntax.error.orphaned.section.tag=Encountered a '{'{0}'}' but no enclosing '{'{1}'}'
 syntax.error.duplicate.section.tag=Duplicate '{'{0}'}' found in '{'{1}'}'
@@ -68,6 +69,9 @@ syntax.error.out-of-order.section.tag=Encountered '{'{0}'}' out of order
 syntax.error.unexpected.close.tag=Close tag '{'{0}'}' without a begin tag
 syntax.error.unexpected.eof=Unexpected end of file
 syntax.error.unexpected.range.parameter=Too many parameters to ''range'' expression
+syntax.error.unexpected.tokens.in.declaration.tag=Unexpected token in {0} declaration
+syntax.error.unexpected.tokens.in.tag=Unexpected token in {0} tag
+syntax.error.unexpected.tokens.in.unknown.tag=Unexpected token in tag
 syntax.error.missing.range.parameter=Missing parameters to ''range'' expression
 syntax.error.unterminated.string.literal=Unterminated string literal
 syntax.error.unclosed.open.tag=Tag is not closed
