Added support for alias and let commands; Added support for object and array literal expressions; Added support for null-safe reference and elvis operators; New inspection reports when a foreach or let parameter replaces the value of one declared in a higher scope; Fixed inspection that wold not report unused params in a template that called another using data="all"; Fixed parser bug related to malformed command tags with closing tags; Cleaned up several deprecated code references; Updated version to 0.6.0

--- a/src/net/venaglia/nondairy/i18n/nondairy.properties
+++ b/src/net/venaglia/nondairy/i18n/nondairy.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2010 - 2012 Ed Venaglia
+# Copyright 2010 - 2013 Ed Venaglia
 #
 #    Licensed under the Apache License, Version 2.0 (the "License");
 #    you may not use this file except in compliance with the License.
@@ -55,21 +55,28 @@ syntax.error.expected.name=Name expected
 syntax.error.expected.expression=Expression expected
 syntax.error.expected.directive=Directive expected
 syntax.error.expected.colon.in.ternary=Missing colon in ternary expression
+syntax.error.expected.colon.after.let.name=Colon expected after variable name
 syntax.error.expected.colon.after.parameter.name=Colon expected after parameter name
+syntax.error.expected.let.name=Missing variable name in let command
+syntax.error.expected.let.value=Missing value for variable {0}
 syntax.error.expected.parameter.declaration=Missing named parameter declaration
 syntax.error.expected.keyword.in=Missing ''in'' keyword
 syntax.error.expected.keyword.range=Missing ''range'' keyword
 syntax.error.expected.parameter.name=Parameter name expected
 syntax.error.expected.parameter.value=Missing parameter value
+syntax.error.expected.string.key.in.literal=Key in object literal must be a string
 syntax.error.expected.template.definition=Template name must start with a ''.''
 syntax.error.inconvertable.expression=Cannot convert expression of {0} type to a {1}
 syntax.error.orphaned.section.tag=Encountered a '{'{0}'}' but no enclosing '{'{1}'}'
 syntax.error.duplicate.section.tag=Duplicate '{'{0}'}' found in '{'{1}'}'
 syntax.error.out-of-order.section.tag=Encountered '{'{0}'}' out of order
 syntax.error.unexpected.close.tag=Close tag '{'{0}'}' without a begin tag
+syntax.error.unexpected.colon.in.literal=Unexpected colon in literal expression
+syntax.error.unexpected.comma.in.literal=Unexpected comma in literal expression
 syntax.error.unexpected.eof=Unexpected end of file
 syntax.error.unexpected.range.parameter=Too many parameters to ''range'' expression
 syntax.error.unexpected.tokens.in.declaration.tag=Unexpected token in {0} declaration
+syntax.error.unexpected.tokens.in.literal=Unexpected token {0} in literal expression
 syntax.error.unexpected.tokens.in.tag=Unexpected token in {0} tag
 syntax.error.unexpected.tokens.in.unknown.tag=Unexpected token in tag
 syntax.error.missing.range.parameter=Missing parameters to ''range'' expression
@@ -77,9 +84,11 @@ syntax.error.unterminated.string.literal=Unterminated string literal
 syntax.error.unclosed.open.tag=Tag is not closed
 syntax.error.invalid.close.tag=Invalid close tag
 syntax.error.invalid.function.parameter.list=Invalid parameter list
+syntax.error.invalid.let.variable.name=Invalid variable name: {0}
 syntax.error.unspecified=An unspecified error has occurred
 
 syntax.expression.type.any=unknown
+syntax.expression.type.object=object
 syntax.expression.type.string=string
 syntax.expression.type.number=number
 syntax.expression.type.boolean=boolean
@@ -103,6 +112,9 @@ inspection.undeclared.parameter.label=Undeclared parameters
 inspection.undeclared.parameter.message=Parameter ''{0}'' is not declared
 inspection.undeclared.parameter.fix=Add Parameter ''{0}'' to Declaration
 inspection.undeclared.parameter.description=Detects when a parameter is used in a template and is not declared in template docs.
+inspection.parameter.name.conflict.label=Parameter Already Declared
+inspection.parameter.name.conflict.message=Parameter ''{0}'' is already declared
+inspection.parameter.name.conflict.description=Detects when a parameter is declared in a foreach or let command, but has previously been declared.
 inspection.undeclared.call.parameter.label=Undeclared parameters in call
 inspection.undeclared.call.parameter.message=Parameter ''{0}'' is not declared
 inspection.undeclared.call.parameter.fix=Add Parameter ''{0}'' to Declaration
@@ -121,3 +133,16 @@ inspection.call.missing.param.description=Detects when a call is made, but a req
 inspection.call.undeclared.template.label=Call undeclared template
 inspection.call.undeclared.template.message=Template {0} could not be found.
 inspection.call.undeclared.template.description=Detects call and delcall commands that refer to undefined template names.
+inspection.unused.alias.label=Unused Alias
+inspection.unused.alias.message=Unused '{'alias'}' ''{0}''
+inspection.unused.alias.fix=Remove Unused Alias ''{0}''
+inspection.unused.alias.description=Detects when an alias command is not used by any call command in the file.
+inspection.unnecessary.alias.label=Unnecessary Alias
+inspection.unnecessary.alias.message=Unnecessary '{'alias'}' ''{0}''
+inspection.unnecessary.alias.fix=Remove Unnecessary Alias ''{0}''
+inspection.unnecessary.alias.description=Detects when a duplicate alias command is present, or when it aliases the current namespace.
+
+cache.debugger.format.default.namespace={0} for default namespace
+cache.debugger.format.namespace={0} for '{'namespace {1}'}'
+cache.debugger.format.alias={0} for '{'alias {1}'}'
+cache.debugger.format.module={0} for module ''{1}''
